fix :  position of button and alignment

--- a/components/Cards/cards.css
+++ b/components/Cards/cards.css
@@ -58,6 +58,8 @@ html {
 .hcard-btn {
     display: flex;
     padding: 0.5rem;
+    justify-content: center;
+    align-items: center;
 }
 
 .hcard-text {
